adding chart to technical section

--- a/src/styles/table.css
+++ b/src/styles/table.css
@@ -1,5 +1,5 @@
 .technical-analysis-table {
-    max-width: 600px !important;
+    /* max-width: 600px !important; */
 }
 
 .technical-analysis-table,
