--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -47,6 +47,7 @@
 	height: 3rem;
 	border-radius: 8px;
 	position: relative;
+	margin: .15rem 0;
 	&:hover {
 		background-color: #30305a;
 		outline: 0;
